# awful_book_sanitizer

./: .dirdocs.nuon  Cargo.toml  README.md
output/: Hercules, Olia | Mamushka, Recipes from Ukraine and Eastern Europe.epub.epub.txt.yaml
src/: main.rs
