[package]
name = "awful_text_sanitizer"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/graves/awful_text_sanitizer"
homepage = "https://github.com/graves/awful_text_sanitizer"
documentation = "https://docs.rs/awful_text_sanitizer"
description = "CLI to clean up OCR-mangled book excerpts into readable text using OpenAI-compatible APIs."
keywords = ["ocr", "cli", "text", "sanitizer", "llm"]
categories = ["command-line-utilities", "text-processing"]
# Keep the published crate small:
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE*"
]

[dependencies]
text-splitter = { version = "0.25.1", features = ["tiktoken-rs"] }
tiktoken-rs    = "0.6.0"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
awful_aj = { version = "0.3.6", optional = true }


[[bin]]
name = "awful_text_sanitizer"
path = "src/main.rs"
