[package]
name = "awful_book_sanitizer"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
license = "CC-BY-SA-4.0"
readme = "README.md"
repository = "https://github.com/graves/awful_book_sanitizer"
homepage = "https://github.com/graves/awful_book_sanitizer"
documentation = "https://docs.rs/awful_book_sanitizer"
description = "CLI to clean up OCR-mangled book excerpts into readable text using OpenAI-compatible APIs."
keywords = ["ocr", "cli", "text", "sanitizer", "llm"]
categories = ["command-line-utilities", "text-processing"]
# Keep the published crate small:
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE*"
]

[dependencies]
text-splitter = { version = "0.25.1", features = ["tiktoken-rs"] }
tiktoken-rs    = "0.6.0"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
awful_aj = "0.3.6"


[[bin]]
name = "awful_book_sanitizer"
path = "src/main.rs"
